# OLDX_VISUAL_FOR_PI

./: README.md
firmware/: 地标.rar
firmware/Color_Tracker/src/: main.cpp
firmware/Cube_Game1/: 51.avi  CMakeLists.txt  Cube_Game1.kdev4  rasp320.yml
firmware/Cube_Game1/src/: main.cpp
firmware/Cube_Game1/video/: 52.avi
firmware/Cube_Tracker/src/: main.cpp
firmware/Face_Tracker/: run.py
firmware/Face_Tracker/src/: main.cpp
firmware/Line_Track/: CMakeLists.txt  untitled.pro
firmware/Line_Track/src/: main.cpp
firmware/Record/: CMakeLists.txt
firmware/Record/src/: main.cpp
